--- a/Polarcode_Simulation.ipynb
+++ b/Polarcode_Simulation.ipynb
@@ -80,9 +80,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "625e56c3",
+   "metadata": {},
+   "source": [
+    "## 1.1 F-Function"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "6f97df1d",
+   "execution_count": null,
+   "id": "878b4576",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,8 +105,24 @@
     "    Returns:\n",
     "        np.array or float: Result of the f-function, approximating min(|a|, |b|) with appropriate sign.\n",
     "    \"\"\"\n",
-    "    return (1-2*(a<0))*(1-2*(b<0))*np.minimum(np.abs(a),np.abs(b))\n",
-    "\n",
+    "    return (1-2*(a<0))*(1-2*(b<0))*np.minimum(np.abs(a),np.abs(b))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26a26f55",
+   "metadata": {},
+   "source": [
+    "## 1.2 G-Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d857f943",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def g_function(a, b, c):\n",
     "    \"\"\"\n",
     "    Calculates the g-function for polar decoding.\n",
@@ -111,8 +135,24 @@
     "    Returns:\n",
     "        np.array or float: Result of the g-function.\n",
     "    \"\"\"\n",
-    "    return b + (1 - 2 * c) * a\n",
-    "\n",
+    "    return b + (1 - 2 * c) * a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "785684be",
+   "metadata": {},
+   "source": [
+    "## 1.3 Encoding Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "061ce34d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def polar_encode(u):\n",
     "    \"\"\"\n",
     "    Encodes a message vector 'u' using the polar encoding scheme.\n",
@@ -140,8 +180,24 @@
     "            x[i : i + 2 * m] = np.concatenate(((a + b) % 2, b))\n",
     "        # Double the block size for the next stage.\n",
     "        m *= 2\n",
-    "    return x\n",
-    "\n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4209a157",
+   "metadata": {},
+   "source": [
+    "## 1.4 Decoding Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f97df1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def polar_sc_decode(received_llrs, N, n, is_frozen):\n",
     "    \"\"\"\n",
     "    Decodes a received Log-Likelihood Ratio (LLR) vector using the Successive Cancellation (SC) algorithm.\n",
@@ -241,10 +297,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0d6c03c",
+   "id": "3e1b76e9",
    "metadata": {},
    "source": [
-    "# 2. Simulation"
+    "## 1.5 Simulation Function"
    ]
   },
   {
@@ -330,6 +386,14 @@
     "    FER = Nblkerrs / blk_count if blk_count > 0 else 0\n",
     "\n",
     "    return BER, FER, blk_count"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0d6c03c",
+   "metadata": {},
+   "source": [
+    "# 2. Run Simulation"
    ]
   },
   {
@@ -727,6 +791,14 @@
     "\n",
     "overall_end_time = time.time()\n",
     "print(f\"\\n--- SIMULATION COMPLETED in {overall_end_time - overall_start_time:.2f} seconds ---\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1c0f7e9",
+   "metadata": {},
+   "source": [
+    "## 2.1 Plot Results"
    ]
   },
   {
