--- a/Polarcode_Simulation.ipynb
+++ b/Polarcode_Simulation.ipynb
@@ -10,19 +10,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "2657fc4b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import time"
+    "import time\n",
+    "from joblib import Parallel, delayed\n",
+    "from tqdm import tqdm\n",
+    "import random\n",
+    "\n",
+    "SEED = 42 \n",
+    "\n",
+    "np.random.seed(SEED)\n",
+    "random.seed(SEED)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "aed92164",
    "metadata": {},
    "outputs": [],
@@ -89,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "878b4576",
    "metadata": {},
    "outputs": [],
@@ -118,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "d857f943",
    "metadata": {},
    "outputs": [],
@@ -148,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "061ce34d",
    "metadata": {},
    "outputs": [],
@@ -193,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "6f97df1d",
    "metadata": {},
    "outputs": [],
@@ -305,12 +313,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "2da0abd0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_simulation(N, K, EbNodB, target_errors=100, max_blocks=1000):\n",
+    "def run_simulation(N, K, EbNodB, target_errors=100):\n",
     "    \"\"\"\n",
     "    Runs a single simulation for given polar code parameters.\n",
     "    This function utilizes the new, separate decoder function 'polar_sc_decode'.\n",
@@ -320,7 +328,6 @@
     "        K (int): Number of information bits.\n",
     "        EbNodB (float): Energy per bit to noise power spectral density ratio in dB.\n",
     "        target_errors (int, optional): The target number of block errors to simulate. Defaults to 100.\n",
-    "        max_blocks (int, optional): The maximum number of blocks to simulate. Defaults to 100.\n",
     "\n",
     "    Returns:\n",
     "        tuple: A tuple containing:\n",
@@ -350,7 +357,7 @@
     "    blk_count = 0  # Total number of simulated blocks.\n",
     "\n",
     "    # Continue simulation until target errors or maximum blocks are reached.\n",
-    "    while Nblkerrs < target_errors and blk_count < max_blocks:\n",
+    "    while Nblkerrs < target_errors:\n",
     "        blk_count += 1\n",
     "\n",
     "        # 1. Generate and Encode\n",
@@ -385,7 +392,7 @@
     "    BER = Nbiterrs / (K * blk_count) if blk_count > 0 else 0\n",
     "    FER = Nblkerrs / blk_count if blk_count > 0 else 0\n",
     "\n",
-    "    return BER, FER, blk_count, Nblkerrs"
+    "    return BER, FER, blk_count"
    ]
   },
   {
@@ -398,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "69cfe998",
    "metadata": {},
    "outputs": [
@@ -700,46 +707,46 @@
     }
    ],
    "source": [
-    "# Define simulation configurations for various codeword lengths (N) and code rates (K).\n",
+    "# Define the simulation configurations for different code word lengths (N) and code rates (K).\n",
     "sim_configs = {\n",
     "    1024: {\n",
-    "        # Configs for N=1024\n",
+    "        # Configurations for N=1024\n",
     "        \"Rate 0.75 (K=768)\": {\"K\": 768, \"marker\": \"^-\"},\n",
     "        \"Rate 0.50 (K=512)\": {\"K\": 512, \"marker\": \"o-\"},\n",
     "        \"Rate 0.25 (K=256)\": {\"K\": 256, \"marker\": \"s-\"}\n",
     "    },\n",
     "    512: {\n",
-    "        # Configs for N=512\n",
+    "        # Configurations for N=512\n",
     "        \"Rate 0.75 (K=384)\": {\"K\": 384, \"marker\": \"^-\"},\n",
     "        \"Rate 0.50 (K=256)\": {\"K\": 256, \"marker\": \"o-\"},\n",
     "        \"Rate 0.25 (K=128)\": {\"K\": 128, \"marker\": \"s-\"}\n",
     "    },\n",
     "    256: {\n",
-    "        # Configs for N=256\n",
+    "        # Configurations for N=256\n",
     "        \"Rate 0.75 (K=192)\": {\"K\": 192, \"marker\": \"^-\"},\n",
     "        \"Rate 0.50 (K=128)\": {\"K\": 128, \"marker\": \"o-\"},\n",
     "        \"Rate 0.25 (K=64)\":  {\"K\": 64, \"marker\": \"s-\"}\n",
     "    },\n",
     "    128: {\n",
-    "        # Configs for N=128\n",
+    "        # Configurations for N=128\n",
     "        \"Rate 0.75 (K=96)\": {\"K\": 96, \"marker\": \"^-\"},\n",
     "        \"Rate 0.50 (K=64)\": {\"K\": 64, \"marker\": \"o-\"},\n",
     "        \"Rate 0.25 (K=32)\": {\"K\": 32, \"marker\": \"s-\"}\n",
     "    },\n",
     "    64: {\n",
-    "        # Configs for N=64\n",
+    "        # Configurations for N=64\n",
     "        \"Rate 0.75 (K=48)\": {\"K\": 48, \"marker\": \"^-\"},\n",
     "        \"Rate 0.50 (K=32)\": {\"K\": 32, \"marker\": \"o-\"},\n",
     "        \"Rate 0.25 (K=16)\": {\"K\": 16, \"marker\": \"s-\"}\n",
     "    },\n",
     "    32: {\n",
-    "        # Configs for N=32\n",
+    "        # Configurations for N=32\n",
     "        \"Rate 0.75 (K=24)\": {\"K\": 24, \"marker\": \"^-\"},\n",
     "        \"Rate 0.50 (K=16)\": {\"K\": 16, \"marker\": \"o-\"},\n",
     "        \"Rate 0.25 (K=8)\":  {\"K\": 8, \"marker\": \"s-\"}\n",
     "    },\n",
     "    16: {\n",
-    "        # Configs for N=16\n",
+    "        # Configurations for N=16\n",
     "        \"Rate 0.75 (K=12)\": {\"K\": 12, \"marker\": \"^-\"},\n",
     "        \"Rate 0.50 (K=8)\": {\"K\": 8, \"marker\": \"o-\"},\n",
     "        \"Rate 0.25 (K=4)\":  {\"K\": 4, \"marker\": \"s-\"}\n",
@@ -749,48 +756,62 @@
     "# Eb/No range for the X-axis in dB\n",
     "ebno_db_range = np.arange(0.5, 6.0, 0.5)\n",
     "\n",
-    "# A nested dictionary to store the results of all simulations\n",
-    "# NEW structure: {N: {config_name: {\"ber\": [...], \"fer\": [...]}}}\n",
-    "all_results = {}\n",
-    "\n",
-    "print(\"--- STARTING PARAMETER COMPARISON ---\")\n",
-    "overall_start_time = time.time()\n",
-    "\n",
-    "# --- 2. Loop over all configurations ---\n",
-    "\n",
-    "# Outer loop: Iterates over different codeword lengths (N)\n",
+    "# Collect all simulation tasks in a list\n",
+    "tasks = []\n",
     "for N, configs_for_N in sim_configs.items():\n",
-    "    print(f\"\\n===== Testing Codeword Length N={N} =====\")\n",
-    "\n",
-    "    # Initialize the results dictionary for the current N\n",
-    "    all_results[N] = {}\n",
-    "\n",
-    "    # Inner loop: Iterates over the rate configurations for the current N\n",
     "    for config_name, config_params in configs_for_N.items():\n",
     "        K = config_params[\"K\"]\n",
-    "        print(f\"\\n--- Simulating Configuration: {config_name} ---\")\n",
-    "\n",
-    "        # Lists to store the results for the current curve (BER and FER for all Eb/No values)\n",
-    "        ber_results = []\n",
-    "        fer_results = [] # ADDED: List for FER\n",
-    "\n",
-    "        # Loop over all Eb/No values for the current configuration\n",
     "        for ebno_db in ebno_db_range:\n",
-    "            point_start_time = time.time()\n",
-    "            # Call the run_simulation function to get BER, FER, and block count for the current Eb/No\n",
-    "            ber, fer, blks, Nblkerrs = run_simulation(N, K, ebno_db)\n",
-    "            point_end_time = time.time()\n",
+    "            # Füge ein Dictionary für jede einzelne Aufgabe hinzu\n",
+    "            tasks.append({\"N\": N, \"K\": K, \"ebno_db\": ebno_db, \"config_name\": config_name})\n",
     "\n",
-    "            # Output extended with FER\n",
-    "            print(f\"  Eb/No={ebno_db:.1f} dB -> BER={ber:.6f}, FER={fer:.6f} (simulated {blks} blocks with {Nblkerrs} Errors in {point_end_time - point_start_time:.2f}s)\")\n",
-    "            ber_results.append(ber)\n",
-    "            fer_results.append(fer) # ADDED: Save FER value\n",
+    "print(f\"--- STARTING SIMULATION ---\")\n",
+    "print(f\"Amount of tasks: {len(tasks)}\")\n",
+    "overall_start_time = time.time()\n",
+    "'''\n",
+    "# Perform all tasks at once in parallel\n",
+    "results_flat = Parallel(n_jobs=-1)(\n",
+    "    delayed(run_simulation)(task[\"N\"], task[\"K\"], task[\"ebno_db\"]) for task in tqdm(tasks, desc=\"Simulation Progress\")\n",
+    ")\n",
+    "'''\n",
+    "results_flat = []\n",
+    "for task in tqdm(tasks, desc=\"Simulation Progress\"):\n",
+    "    print(f\"\\n▶️  Currently running: N={task['N']}, K={task['K']}, ebno_db={task['ebno_db']}\")\n",
+    "    result = run_simulation(task[\"N\"], task[\"K\"], task[\"ebno_db\"])\n",
+    "    results_flat.append(result)\n",
     "\n",
-    "        # Store both curves (BER and FER) in the results dictionary for the current configuration\n",
-    "        all_results[N][config_name] = {\"ber\": ber_results, \"fer\": fer_results}\n",
+    "\n",
+    "all_results = {N: {name: {\"ber\": [], \"fer\": [], \"block_count\": []} for name in configs_for_N} for N, configs_for_N in sim_configs.items()}\n",
+    "\n",
+    "# Go through the task list and the (flat) results to assign them\n",
+    "for i, task in enumerate(tasks):\n",
+    "    N = task[\"N\"]\n",
+    "    config_name = task[\"config_name\"]\n",
+    "    ber, fer, block_count  = results_flat[i] \n",
+    "    \n",
+    "    ebno_db = task[\"ebno_db\"]\n",
+    "    idx = np.where(ebno_db_range == ebno_db)[0][0]\n",
+    "\n",
+    "    if len(all_results[N][config_name][\"ber\"]) != len(ebno_db_range):\n",
+    "        all_results[N][config_name][\"ber\"] = [0] * len(ebno_db_range)\n",
+    "        all_results[N][config_name][\"fer\"] = [0] * len(ebno_db_range)\n",
+    "        all_results[N][config_name][\"block_count\"] = [0] * len(ebno_db_range)\n",
+    "        \n",
+    "    all_results[N][config_name][\"ber\"][idx] = ber\n",
+    "    all_results[N][config_name][\"fer\"][idx] = fer\n",
+    "    all_results[N][config_name][\"block_count\"][idx] = block_count\n",
+    "\n",
     "\n",
     "overall_end_time = time.time()\n",
-    "print(f\"\\n--- SIMULATION COMPLETED in {overall_end_time - overall_start_time:.2f} seconds ---\")"
+    "print(f\"\\\\n--- SIMULATION COMPLETED in {overall_end_time - overall_start_time:.2f} seconds ---\")\n",
+    "\n",
+    "# Optional: Output the sorted results for checking\n",
+    "for N, configs in all_results.items():\n",
+    "    print(f\"\\\\n===== Results for Codeword Length N={N} =====\\\\n\")\n",
+    "    for name, data in configs.items():\n",
+    "        print(f\"--- {name} ---\")\n",
+    "        for i, ebno_db in enumerate(ebno_db_range):\n",
+    "            print(f\"  Eb/No={ebno_db:.1f} dB -> BER={data['ber'][i]:.6f}, FER={data['fer'][i]:.6f}, Blocks={data['block_count'][i]}\")"
    ]
   },
   {
@@ -803,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "12e761e0",
    "metadata": {},
    "outputs": [
@@ -907,7 +928,7 @@
     "        ax2.semilogy(ebno_db_range, results[\"fer\"], fer_marker_style, color=color, label=f'{config_name} (FER)')\n",
     "\n",
     "    # Title and X-axis (shared)\n",
-    "    #ax1.set_title(f'Performance Comparison of Polar Codes (N={N}) with SC Decoder', fontsize=16)\n",
+    "    ax1.set_title(f'Performance Comparison of Polar Codes (N={N}) with SC Decoder', fontsize=16)\n",
     "    ax1.set_xlabel('Eb/No (dB)', fontsize=14)\n",
     "\n",
     "    # Configuration of the primary Y-axis (BER)\n",
