--- a/Polarcode_Simulation.ipynb
+++ b/Polarcode_Simulation.ipynb
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": null,
    "id": "69cfe998",
    "metadata": {},
    "outputs": [
@@ -541,48 +541,48 @@
    "source": [
     "# Define the simulation configurations for different code word lengths (N) and code rates (K).\n",
     "sim_configs = {\n",
-    "    #1024: {\n",
-    "    #    # Configurations for N=1024\n",
-    "    #    \"Rate 0.75 (K=768)\": {\"K\": 768, \"marker\": \"^-\"},\n",
-    "    #    \"Rate 0.50 (K=512)\": {\"K\": 512, \"marker\": \"o-\"},\n",
-    "    #    \"Rate 0.25 (K=256)\": {\"K\": 256, \"marker\": \"s-\"}\n",
-    "    #},\n",
-    "    #512: {\n",
-    "    #    # Configurations for N=512\n",
-    "    #    \"Rate 0.75 (K=384)\": {\"K\": 384, \"marker\": \"^-\"},\n",
-    "    #    \"Rate 0.50 (K=256)\": {\"K\": 256, \"marker\": \"o-\"},\n",
-    "    #   \"Rate 0.25 (K=128)\": {\"K\": 128, \"marker\": \"s-\"}\n",
-    "    #},\n",
+    "    1024: {\n",
+    "        # Configurations for N=1024\n",
+    "        \"Rate 0.75 (K=768)\": {\"K\": 768, \"marker\": \"^-\"},\n",
+    "        \"Rate 0.50 (K=512)\": {\"K\": 512, \"marker\": \"o-\"},\n",
+    "        \"Rate 0.25 (K=256)\": {\"K\": 256, \"marker\": \"s-\"}\n",
+    "    },\n",
+    "    512: {\n",
+    "        # Configurations for N=512\n",
+    "        \"Rate 0.75 (K=384)\": {\"K\": 384, \"marker\": \"^-\"},\n",
+    "        \"Rate 0.50 (K=256)\": {\"K\": 256, \"marker\": \"o-\"},\n",
+    "       \"Rate 0.25 (K=128)\": {\"K\": 128, \"marker\": \"s-\"}\n",
+    "    },\n",
     "    256: {\n",
     "        # Configurations for N=256\n",
     "        \"Rate 0.75 (K=192)\": {\"K\": 192, \"marker\": \"^-\"},\n",
     "        \"Rate 0.50 (K=128)\": {\"K\": 128, \"marker\": \"o-\"},\n",
     "        \"Rate 0.25 (K=64)\":  {\"K\": 64, \"marker\": \"s-\"}\n",
     "    },\n",
-    "    #128: {\n",
-    "    #    # Configurations for N=128\n",
-    "    #    \"Rate 0.75 (K=96)\": {\"K\": 96, \"marker\": \"^-\"},\n",
-    "    #    \"Rate 0.50 (K=64)\": {\"K\": 64, \"marker\": \"o-\"},\n",
-    "    #    \"Rate 0.25 (K=32)\": {\"K\": 32, \"marker\": \"s-\"}\n",
-    "    #},\n",
-    "    #64: {\n",
-    "    #   # Configurations for N=64\n",
-    "    #    \"Rate 0.75 (K=48)\": {\"K\": 48, \"marker\": \"^-\"},\n",
-    "    #    \"Rate 0.50 (K=32)\": {\"K\": 32, \"marker\": \"o-\"},\n",
-    "    #    \"Rate 0.25 (K=16)\": {\"K\": 16, \"marker\": \"s-\"}\n",
-    "    #},\n",
-    "    #32: {\n",
-    "    #    # Configurations for N=32\n",
-    "    #    \"Rate 0.75 (K=24)\": {\"K\": 24, \"marker\": \"^-\"},\n",
-    "    #    \"Rate 0.50 (K=16)\": {\"K\": 16, \"marker\": \"o-\"},\n",
-    "    #    \"Rate 0.25 (K=8)\":  {\"K\": 8, \"marker\": \"s-\"}\n",
-    "    #},\n",
-    "    #16: {\n",
-    "    #    # Configurations for N=16\n",
-    "    #    \"Rate 0.75 (K=12)\": {\"K\": 12, \"marker\": \"^-\"},\n",
-    "    #    \"Rate 0.50 (K=8)\": {\"K\": 8, \"marker\": \"o-\"},\n",
-    "    #    \"Rate 0.25 (K=4)\":  {\"K\": 4, \"marker\": \"s-\"}\n",
-    "    #}\n",
+    "    128: {\n",
+    "        # Configurations for N=128\n",
+    "        \"Rate 0.75 (K=96)\": {\"K\": 96, \"marker\": \"^-\"},\n",
+    "        \"Rate 0.50 (K=64)\": {\"K\": 64, \"marker\": \"o-\"},\n",
+    "        \"Rate 0.25 (K=32)\": {\"K\": 32, \"marker\": \"s-\"}\n",
+    "    },\n",
+    "    64: {\n",
+    "       # Configurations for N=64\n",
+    "        \"Rate 0.75 (K=48)\": {\"K\": 48, \"marker\": \"^-\"},\n",
+    "        \"Rate 0.50 (K=32)\": {\"K\": 32, \"marker\": \"o-\"},\n",
+    "        \"Rate 0.25 (K=16)\": {\"K\": 16, \"marker\": \"s-\"}\n",
+    "    },\n",
+    "    32: {\n",
+    "        # Configurations for N=32\n",
+    "        \"Rate 0.75 (K=24)\": {\"K\": 24, \"marker\": \"^-\"},\n",
+    "        \"Rate 0.50 (K=16)\": {\"K\": 16, \"marker\": \"o-\"},\n",
+    "        \"Rate 0.25 (K=8)\":  {\"K\": 8, \"marker\": \"s-\"}\n",
+    "    },\n",
+    "    16: {\n",
+    "        # Configurations for N=16\n",
+    "        \"Rate 0.75 (K=12)\": {\"K\": 12, \"marker\": \"^-\"},\n",
+    "        \"Rate 0.50 (K=8)\": {\"K\": 8, \"marker\": \"o-\"},\n",
+    "        \"Rate 0.25 (K=4)\":  {\"K\": 4, \"marker\": \"s-\"}\n",
+    "    }\n",
     "}\n",
     "\n",
     "# Eb/No range for the X-axis in dB\n",
